kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "hari-app.durgasri.in"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-service
                port:
                  number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spec-health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: "hari-h.durgasri.in"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-service
                port:
                  number: 8000
